tried replacing erl with lfe 1:1

--- a/rebar.config
+++ b/rebar.config
@@ -13,7 +13,8 @@
                ]}.
 
 {deps, [
-        {nova, "0.5.2"}
+        {nova, "0.5.2"},
+        {lfe, {git, "http://github.com/rvirding/lfe", {branch, "develop"}}}
        ]}.
 
 
@@ -37,7 +38,8 @@
 {plugins, [
            rebar3_auto,
            {rebar3_erlydtl_plugin, ".*",
-            {git, "https://github.com/tsloughter/rebar3_erlydtl_plugin.git", {branch, "master"}}}
+            {git, "https://github.com/tsloughter/rebar3_erlydtl_plugin.git", {branch, "master"}}},
+            {rebar3_lfe, {git, "http://github.com/lfe-rebar3/rebar3_lfe", {branch, "master"}}}
           ]}.
 
 {provider_hooks, [
