updated to nova dev branch

--- a/config/sys.config
+++ b/config/sys.config
@@ -12,6 +12,8 @@
          {bootstrap_application, my_first_nov}, %% Bootstraps the application
          {plugins, [
                    ]}
-        ]}
+        ]},
+
+{my_first_nov, [{nova_applications, [my_first_nov]}]}
   %% Please change your app.src-file instead if you intend to add app-specific configurations
 ].
