--- a/rebar.config
+++ b/rebar.config
@@ -12,8 +12,7 @@
                 {default_libraries, [nova_erlydtl_inventory]}
                ]}.
 
-{deps, [
-        {nova, "0.5.2"}
+{deps, [{nova, {git, "https://github.com/novaframework/nova.git", {branch, "nova-plugins-state"}}}
        ]}.
 
 
